--- a/sog/build.xml
+++ b/sog/build.xml
@@ -23,6 +23,7 @@
  !      install-runonly  -> install a runonly distribution into Starlink tree
  !      jars             -> creates the package jar file
  !      javadocs         -> creates the API documentation
+ !      javadoc-sources  -> does nothing
  !      test             -> run up SOG from local build
  !!
  !! test targets yet to be done.
@@ -831,6 +832,17 @@
               targetfile="${dist.javadocs}/packages.html" >
         <srcfiles dir= "${java.dir}" includes="**/*.java"/>
     </uptodate>
+  </target>
+
+  <!--
+   !   ==========================================
+   !   Creates the API documentation java sources
+   !   ==========================================
+   !
+   !  Does nothing.
+   !-->
+  <target name="javadoc-sources"
+          description="-> does nothing">
   </target>
 
   <!--
