--- a/util/build.xml
+++ b/util/build.xml
@@ -23,6 +23,7 @@
  !      install-runonly  -> install a runonly distribution into Starlink tree
  !      jars             -> creates the package jar file
  !      javadocs         -> creates the API documentation
+ !      javadoc-sources  -> does nothing
  !!
  !! test targets yet to be done.
  !!
@@ -124,6 +125,7 @@
   <!-- Directories to receive the various build components -->
   <property name="build.dir" value="${basedir}/build"/>
   <property name="build.classes" value="${build.dir}/classes"/>
+  <property name="build.java" value="${build.dir}/java"/>
   <property name="build.tests" value="${build.dir}/testcases"/>
   <property name="build.tests.javadocs" value="${build.dir}/javadocs.test/"/>
 
@@ -722,7 +724,7 @@
              classpathref="classpath">
 
       <!-- Exclude broken and test files etc. from the document -->
-      <fileset dir="src/main" defaultexcludes="yes">
+      <fileset dir="${java.dir}" defaultexcludes="yes">
           <exclude name="**/support/*"/>
           <exclude name="**/makefile"/>
           <exclude name="**/testcases/*"/>
@@ -749,6 +751,45 @@
               targetfile="${dist.javadocs}/packages.html" >
         <srcfiles dir= "${java.dir}" includes="**/*.java"/>
     </uptodate>
+  </target>
+
+  <!--
+   !   =========================================
+   !   Makes the API java source files available
+   !   =========================================
+   !
+   !  The full API documentation is created from all the various
+   !  packages (of which this package is just one). This target makes
+   !  the source code that should be used in the full public API
+   !  available in a special part of the build tree so that it can be
+   !  automatically discovered. This method works around two potential
+   !  problems, not all source code the in src/main directories should be
+   !  in the API docs, and it's not possible to make this distinction
+   !  easily outside this package (cannot pass out a fileset), plus
+   !  some code is generated, so cannot be located by scanning the
+   !  src/main tree. When javadocs can be generated incrementally this
+   !  arrangement should be reworked to generate whatever is needed as
+   !  part of the javadocs target.
+   !-->
+  <target name="javadoc-sources"
+          description="-> make source files for release API documention">
+
+    <mkdir dir="${build.java}"/>
+
+    <!-- Copy and/or generate the source to be included when creating
+     !   the full Starlink API javadocs-->
+
+    <copy todir="${build.java}">
+      <fileset dir="${java.dir}" defaultexcludes="yes">
+          <exclude name="**/support/*"/>
+          <exclude name="**/makefile"/>
+          <exclude name="**/testcases/*"/>
+          <exclude name="**/VERSION"/>
+          <exclude name="**/README"/>
+          <exclude name="**/.*"/>
+      </fileset>
+    </copy>
+
   </target>
 
   <!--
