--- a/fits/build.xml
+++ b/fits/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
- !  FITS build file
+ !   FITS build file
  !
  !   This file describes how to build the FITS package from a source
  !   release. It requires Apache ANT and a Java Development Kit.
@@ -68,8 +68,12 @@
   <property name="star.build.dir" value="${basedir}/../"/>
 
   <!-- Directory that any archives should be placed into. The local
-   !   directort by default -->
+   !   directory by default -->
   <property name="star.archive.dir" value="${basedir}"/>
+
+  <!-- URL and package-list for linking against full Java docs -->
+  <property name="javaapi.url" value="http://java.sun.com/j2se/1.4/docs/api/"/>
+  <property name="javaapi.lis" value="${star.build.dir}/src/docs/javaapi/"/>
 
   <!--
    !  ================
@@ -206,13 +210,13 @@
 
   <path id="built.classpath">
 
+    <!-- Directly dependent third party jars -->
+    <path refid="built.jarpath"/>
+
     <!-- All locally built classes -->
     <dirset dir="${star.build.dir}">
       <include name="*/build/classes"/>
     </dirset>
-
-    <!-- Directly dependent third party jars -->
-    <path refid="built.jarpath"/>
 
     <!-- Finally add all "dist" jar files to make sure everything is
      !   resolved, including relative URLs out of the local package -->
@@ -693,15 +697,17 @@
              doctitle="${Name}"
              classpathref="classpath">
 
-      <!-- Exclude broken and test files etc. from the document -->
-      <fileset dir="src/main" defaultexcludes="yes">
-          <exclude name="**/support/*"/>
-          <exclude name="**/makefile"/>
-          <exclude name="**/testcases/*"/>
-          <exclude name="**/VERSION"/>
-          <exclude name="**/README"/>
-          <exclude name="**/.*"/>
-      </fileset>
+      <!-- Get a list of directories that name all the potential
+       !   java packages -->
+      <packageset dir="${java.dir}" defaultexcludes="yes">
+         <include name="**"/>
+         <exclude name="**/support/*"/>
+         <exclude name="**/testcases/*"/>
+      </packageset>
+
+      <!-- Link to the full Java API at SUNs website -->
+      <link offline="true" href="${javaapi.url}"
+            packagelistLoc="${javaapi.lis}"/>
 
       <group title="${Name} API" packages="${package.name}*"/>
 
