--- a/junit/build.xml
+++ b/junit/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
- !  JUnit build file
+ !   JUnit build file
  !
  !   This file describes how to install the local JUnit package from its
  !   released state. It requires Apache ANT and a Java Development Kit.
@@ -65,7 +65,7 @@
   <property name="star.build.dir" value="${basedir}/../"/>
 
   <!-- Directory that any archives should be placed into. The local
-   !   directort by default -->
+   !   directory by default -->
   <property name="star.archive.dir" value="${basedir}"/>
 
   <!--
