--- a/oldarray/build.xml
+++ b/oldarray/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
- !  NDArray build file (temporary)
+ !   NDArray build file (temporary)
  !
  !   This file describes how to install the local NDArray package from its
  !   released state. It requires Apache ANT and a Java Development Kit.
@@ -70,7 +70,7 @@
   <property name="star.build.dir" value="${basedir}/../"/>
 
   <!-- Directory that any archives should be placed into. The local
-   !   directort by default -->
+   !   directory by default -->
   <property name="star.archive.dir" value="${basedir}"/>
 
   <!--
